--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-*.idea
-.env
+### WebStorm ###
+.idea
+
+# CMake
+cmake-build-*/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+.idea_modules/
+
+node_modules
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
